# edict

./: Makefile.am  configure.ac  edict.desktop
data/: Makefile.am  edict.ini  edict.n516.ini  edict.prs505.ini
debian/: changelog  control  edict.install  rules
help/: Makefile.am
po/: Makefile.am  POTFILES  edict.pot  hu.po  pl.po  ru.po  uk.po
src/: Makefile.am  edict.c  edict_launcher.c  picodict.c  picodict.h
themes/: Makefile.am
themes/azbooka/: Makefile.am  edict.edc
themes/default/: Makefile.am  edict.edc
